# 1-mortality-decomposition

./: .gitignore  MIGRATION_SUMMARY.md  README.md  codex-update-hpc.md  pyproject.toml
config/: ch1_run_config.json
docs/: README.md  context.md  label_logic_audit.md  (+4 more)
hpc-1-mortality-decomposition/: README.md  pyproject.toml  requirements.txt  run_asic_hard_case_comparison.sh  run_asic_hard_case_comparison_variable_audit.sh  run_asic_hardcase_comparison.sh  run_asic_hardcase_comparison_variable_audit.sh  run_asic_horizon_dependence_final.sh  run_asic_horizon_dependence_foundation.sh  run_asic_horizon_dependence_pipeline.sh  run_asic_horizon_hard_case_stability.sh  run_asic_icd10_disease_group_validation.sh  run_ch1_asic_descriptive_viability.sh  run_chapter1_asic_hard_case_comparison.py  run_chapter1_asic_hardcase_comparison.py  run_chapter1_asic_horizon_dependence_final.py  run_chapter1_asic_horizon_dependence_foundation.py  run_chapter1_asic_horizon_hard_case_stability.py  run_chapter1_ch1_asic_descriptive_viability.py  run_chapter1_define_hard_cases.py  run_chapter1_evaluate_baselines.py  run_chapter1_hard_case_agreement.py  run_chapter1_logistic_baseline.py  run_chapter1_preprocessing.py  run_chapter1_temporal_preview.py  run_chapter1_xgboost_baseline.py  run_chapter1_xgboost_recalibration.py  run_define_hard_cases.sh  run_evaluate_baselines.sh  run_hard_case_agreement.sh  run_logistic_baseline.sh  run_preprocessing.sh  run_sofa_feasibility.sh  run_temporal_preview.sh  run_xgboost_baseline.sh  run_xgboost_recalibration.sh
hpc-1-mortality-decomposition/config/: ch1_feature_sets.json  ch1_run_config.json
hpc-1-mortality-decomposition/docs/: asic_static_harmonization_plan.md  chapter1_analysis_spec_frozen_v1.md  phd_project_plan.md
hpc-1-mortality-decomposition/notebooks/: ch1_asic_baseline_evaluation_review.ipynb  ch1_asic_hard_case_comparison.ipynb  ch1_asic_hardcase_comparison.ipynb  ch1_baseline_model_readiness_check.ipynb  ch1_cohort_characterization.ipynb  ch1_observation_process_visualization.ipynb  ch1_preprocessing_runbook.ipynb  ch1_risk_trajectory_shapes.ipynb
hpc-1-mortality-decomposition/reports/: ch1_asic_descriptive_viability_memo_draft.md
hpc-1-mortality-decomposition/scripts/: ch1_asic_hard_case_comparison_variable_audit.py  ch1_asic_hardcase_comparison_variable_audit.py  ch1_asic_icd10_disease_group_inspection.py  ch1_sofa_feasibility_audit.py  run_chapter1_asic_hard_case_comparison.sh  run_chapter1_asic_hard_case_comparison_variable_audit.sh  run_chapter1_asic_hardcase_comparison.sh  run_chapter1_asic_hardcase_comparison_variable_audit.sh  run_chapter1_asic_horizon_dependence_final.sh  run_chapter1_asic_horizon_dependence_foundation.sh  run_chapter1_asic_horizon_hard_case_stability.sh  run_chapter1_asic_icd10_disease_group_validation.sh  run_chapter1_ch1_asic_descriptive_viability.sh  run_chapter1_define_hard_cases.sh  run_chapter1_evaluate_baselines.sh  run_chapter1_hard_case_agreement.sh  run_chapter1_logistic_baseline.sh  run_chapter1_preprocessing.sh  run_chapter1_sofa_feasibility.sh  run_chapter1_temporal_preview.sh  run_chapter1_xgboost_baseline.sh  run_chapter1_xgboost_recalibration.sh
hpc-1-mortality-decomposition/slurm/: submit_chapter1_asic_hard_case_comparison.slurm  submit_chapter1_asic_hard_case_comparison_variable_audit.slurm  submit_chapter1_asic_hardcase_comparison.slurm  submit_chapter1_asic_hardcase_comparison_variable_audit.slurm  submit_chapter1_asic_horizon_dependence_final.slurm  submit_chapter1_asic_horizon_dependence_foundation.slurm  submit_chapter1_asic_horizon_hard_case_stability.slurm  submit_chapter1_asic_icd10_disease_group_validation.slurm  submit_chapter1_ch1_asic_descriptive_viability.slurm  submit_chapter1_define_hard_cases.slurm  submit_chapter1_evaluate_baselines.slurm  submit_chapter1_hard_case_agreement.slurm  submit_chapter1_logistic_baseline.slurm  submit_chapter1_preprocessing.slurm  submit_chapter1_sofa_feasibility.slurm  submit_chapter1_temporal_preview.slurm  submit_chapter1_xgboost_baseline.slurm  submit_chapter1_xgboost_recalibration.slurm
hpc-1-mortality-decomposition/src/chapter1_mortality_decomposition/: __init__.py  asic_hard_case_comparison.py  asic_hardcase_comparison.py  asic_horizon_dependence_final.py  asic_horizon_dependence_foundation.py  baseline_evaluation.py  baseline_logistic.py  baseline_xgboost.py  carry_forward.py  config.py  hard_case_agreement.py  hard_case_definition.py  observation_process.py  pipeline.py  run_config.py  splits.py  temporal_blocks.py  temporal_preview.py  utils.py  xgboost_recalibration.py
hpc-1-mortality-decomposition/tests/: ch1_baseline_test_utils.py  test_asic_hard_case_comparison.py  test_asic_horizon_dependence_final.py  test_asic_horizon_dependence_foundation.py  test_asic_horizon_hard_case_stability.py  test_baseline_logistic.py  test_baseline_xgboost.py  test_icd10_disease_groups.py
(+48 files in other folders)
