[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chapter1-mortality-decomposition"
version = "0.1.0"
description = "Standalone Chapter 1 mortality preprocessing from standardized ASIC artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
parquet = [
  "pyarrow>=14.0",
]

[project.scripts]
chapter1-preprocess = "chapter1_mortality_decomposition.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
