[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chapter1-mortality-decomposition"
version = "0.1.0"
description = "Standalone Chapter 1 mortality preprocessing from standardized ASIC artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "xgboost>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
parquet = [
  "pyarrow>=14.0",
]

[project.scripts]
chapter1-preprocess = "chapter1_mortality_decomposition.cli:main"
chapter1-logistic-baseline = "chapter1_mortality_decomposition.baseline_logistic:main"
chapter1-xgboost-baseline = "chapter1_mortality_decomposition.baseline_xgboost:main"
chapter1-evaluate-baselines = "chapter1_mortality_decomposition.baseline_evaluation:main"
chapter1-define-hard-cases = "chapter1_mortality_decomposition.hard_case_definition:main"
chapter1-hard-case-agreement = "chapter1_mortality_decomposition.hard_case_agreement:main"
chapter1-asic-hard-case-comparison = "chapter1_mortality_decomposition.asic_hard_case_comparison:main"
chapter1-asic-horizon-hard-case-stability = "chapter1_mortality_decomposition.asic_horizon_hard_case_stability:main"
chapter1-asic-horizon-dependence-final = "chapter1_mortality_decomposition.asic_horizon_dependence_final:main"
chapter1-xgboost-recalibration = "chapter1_mortality_decomposition.xgboost_recalibration:main"
chapter1-temporal-preview = "chapter1_mortality_decomposition.temporal_preview:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
