[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chapter1-mortality-decomposition-hpc-bundle"
version = "0.1.0"
description = "Self-contained HPC bundle for Chapter 1 mortality preprocessing, baseline modeling, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "xgboost>=2.1",
]

[project.scripts]
chapter1-preprocess = "chapter1_mortality_decomposition.cli:main"
chapter1-logistic-baseline = "chapter1_mortality_decomposition.baseline_logistic:main"
chapter1-xgboost-baseline = "chapter1_mortality_decomposition.baseline_xgboost:main"
chapter1-evaluate-baselines = "chapter1_mortality_decomposition.baseline_evaluation:main"
chapter1-xgboost-recalibration = "chapter1_mortality_decomposition.xgboost_recalibration:main"

[tool.setuptools.packages.find]
where = ["src"]
